[package]
name = "yardland"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_egui = "0.29.0"
libc = "0.2.158"
once_cell = "1.19.0"
num_enum = "0.7.3"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.11.5"
desert = "2.0.1"

[build-dependencies]
cc = "1.1.21"
