[package]
name = "yardland"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_egui = "0.30.0"
bevy_pixels = "0.13.0"
egui_extras = "0.29.1"
rfd = "0.15.0"
libc = "0.2.159"
once_cell = "1.20.2"
num_enum = "0.7.3"
desert = "2.0.1"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
# env_logger = "0.11.5"

[build-dependencies]
cc = "1.1.26"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
