[package]
name = "yardland"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["trace"] }
bevy_egui = "0.32.0"
# bevy_pixels = "0.13.0"
egui_extras = "0.30.0"
rfd = "0.15.2"
libc = "0.2.169"
once_cell = "1.20.3"
num_enum = "0.7.3"
desert = "2.0.1"
log = { version = "0.4.25", features = ["max_level_debug", "release_max_level_warn"] }
# env_logger = "0.11.5"

[build-dependencies]
cc = "1.2.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
